// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip closable 1`] = `
<Chip
  className="my-chp-cls"
  closeBtnAriaLabel="close"
  component="div"
  id="chip_one"
  isOverflowChip={false}
  isReadOnly={false}
  onClick={[Function]}
  tooltipPosition="top"
>
  <GenerateId
    prefix="pf-random-id-"
  >
    <div
      className="pf-c-chip my-chp-cls"
      data-ouia-component-id={3}
      data-ouia-component-type="PF4/Chip"
      data-ouia-safe={true}
    >
      <span
        className="pf-c-chip__text"
        id="chip_one"
      >
        Chip
      </span>
      <Button
        aria-label="close"
        aria-labelledby="remove_chip_one chip_one"
        id="remove_chip_one"
        onClick={[Function]}
        variant="plain"
      >
        <button
          aria-disabled={null}
          aria-label="close"
          aria-labelledby="remove_chip_one chip_one"
          className="pf-c-button pf-m-plain"
          data-ouia-component-id={null}
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={false}
          id="remove_chip_one"
          onClick={[Function]}
          tabIndex={null}
          type="button"
        >
          <TimesIcon
            aria-hidden="true"
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          >
            <svg
              aria-hidden="true"
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 352 512"
              width="1em"
            >
              <path
                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                transform=""
              />
            </svg>
          </TimesIcon>
        </button>
      </Button>
    </div>
  </GenerateId>
</Chip>
`;

exports[`Chip closable with tooltip 1`] = `
<Chip
  className="my-chp-cls"
  closeBtnAriaLabel="close"
  component="div"
  id="chip_one"
  isOverflowChip={false}
  isReadOnly={false}
  onClick={[Function]}
  tooltipPosition="top"
>
  <GenerateId
    prefix="pf-random-id-"
  >
    <div
      className="pf-c-chip my-chp-cls"
      data-ouia-component-id={5}
      data-ouia-component-type="PF4/Chip"
      data-ouia-safe={true}
    >
      <span
        className="pf-c-chip__text"
        id="chip_one"
      >
        1234567890123456789
      </span>
      <Button
        aria-label="close"
        aria-labelledby="remove_chip_one chip_one"
        id="remove_chip_one"
        onClick={[Function]}
        variant="plain"
      >
        <button
          aria-disabled={null}
          aria-label="close"
          aria-labelledby="remove_chip_one chip_one"
          className="pf-c-button pf-m-plain"
          data-ouia-component-id={null}
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={false}
          id="remove_chip_one"
          onClick={[Function]}
          tabIndex={null}
          type="button"
        >
          <TimesIcon
            aria-hidden="true"
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          >
            <svg
              aria-hidden="true"
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 352 512"
              width="1em"
            >
              <path
                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                transform=""
              />
            </svg>
          </TimesIcon>
        </button>
      </Button>
    </div>
  </GenerateId>
</Chip>
`;

exports[`Chip overflow 1`] = `
<Chip
  className="my-chp-cls"
  closeBtnAriaLabel="close"
  component="div"
  isOverflowChip={true}
  isReadOnly={false}
  onClick={[Function]}
  tooltipPosition="top"
>
  <GenerateId
    prefix="pf-random-id-"
  >
    <div
      className="pf-c-chip pf-m-overflow my-chp-cls"
      data-ouia-component-id={1}
      data-ouia-component-type="PF4/OverflowChip"
      data-ouia-safe={true}
      onClick={[Function]}
    >
      <span
        className="pf-c-chip__text"
      >
        4 more
      </span>
    </div>
  </GenerateId>
</Chip>
`;

exports[`Chip readonly 1`] = `
<Chip
  className="my-chp-cls"
  closeBtnAriaLabel="close"
  component="div"
  isOverflowChip={false}
  isReadOnly={true}
  onClick={[Function]}
  tooltipPosition="top"
>
  <GenerateId
    prefix="pf-random-id-"
  >
    <div
      className="pf-c-chip my-chp-cls"
      data-ouia-component-id={7}
      data-ouia-component-type="PF4/Chip"
      data-ouia-safe={true}
    >
      <span
        className="pf-c-chip__text"
        id="pf-random-id-3"
      >
        4 more
      </span>
    </div>
  </GenerateId>
</Chip>
`;
